# window-cap

./: Cargo.toml  README.md
docs/: DESIGN-annotation-system.md  DESIGN-composition-migration.md  DESIGN-input-box.md  DESIGN-transparent-input-box.md  save_region_gpu_readback.md  save_region_with_tool.md  tool-design.md
src/: app.rs  brush.rs  capture.rs  event.rs  main.rs  selection.rs  utils.rs
src/annotation/: mod.rs  toolbar.rs  ui.rs
src/selection/: handles.rs  mod.rs  selection.rs
tests/: gpu_readback.rs
windows-app/: Cargo.toml
windows-app/src/: app.rs  event.rs  key.rs  lib.rs
windows-cap-core/: Cargo.toml
windows-cap-core/src/: app.rs  event.rs
