[workspace]
members = ["windows-app"]

[package]
name = "windows-canvas-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-app = { path = "windows-app" }
windows-canvas.workspace = true
windows-window.workspace = true
windows.workspace = true
image = "0.25"

[workspace.dependencies]
windows-canvas = { git = "https://github.com/microsoft/windows-rs" }
windows-window = { git = "https://github.com/microsoft/windows-rs" }
windows = { git = "https://github.com/microsoft/windows-rs", features = [
    "winuser",
    "dcomp",
    "d2d",
    "wingdi",
]}
