[workspace]
members = ["windows-cap-core"]

[package]
name = "windows-cap"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-cap-core = { path = "windows-cap-core" }
windows-canvas.workspace = true
windows-window.workspace = true
windows.workspace = true
png = "0.17"

[workspace.dependencies]
windows-canvas = { git = "https://github.com/microsoft/windows-rs" }
windows-window = { git = "https://github.com/microsoft/windows-rs" }
windows = { git = "https://github.com/microsoft/windows-rs", features = [
    "winuser",
    "dcomp",
    "d2d",
    "wingdi",
]}
